# InterfaceExposureBenchmark

./: CMakeLists.txt  LICENSE  README.md  do_benches.sh  main.cpp
fast-pimpl/: impl.cpp  interface.h  pimpl.h
pimpl/: impl.cpp  interface.h
sources/: impl.cpp  interface.h
utils/: utils.h
virtual/: impl.cpp  interface.h
